--- a/Css/topo.css
+++ b/Css/topo.css
@@ -20,6 +20,111 @@
     background-color: #C2C2C2;
 }
 
+nav.navbar{
+    border:none;
+    background-color: #f4f4f4;
+}
+
+div#logoMenu {
+    display: block;
+    position: relative;
+    margin: auto;
+    height: 11vh;
+    width: 55vw;
+
+}
+
+div#logoMenu img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    padding: 0px 15px;
+}
+
+div#logoMenu #areaCliente {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+}
+
+div#logoMenu #areaCliente button {
+    margin-top: 20%;
+    width: 190px;
+    border: 1px solid #00a39b;
+    color: #00a39b;
+}
+
+div#logoMenu #areaCliente button i {
+    font-size: 16px;
+    padding-right: 10px;
+}
+
+div#logoMenu #areaCliente button:hover {
+    color: #fff;
+    background-color: #00a39b;
+    font-weight: bold;
+}
+
+div#logoMenu #areaCliente button i:hover {
+    color: #fff;
+    font-weight: bold;
+}
+
+div#menu {
+    display: block;
+    position: relative;
+    margin: auto;
+    padding: 0;
+    width: 55vw;
+    font-size: 18px;
+    color: #737373;
+}
+
+#bs-example-navbar-collapse-1 {
+    position: relative;
+    margin: auto;
+    padding: 0px;
+}
+
+#posmenu {
+    position: relative;
+    margin: auto;
+}
+
+#posmenu li {
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    padding-right: 18px;
+    padding-left: 18px;
+}
+
+
+#posmenu li:hover {
+    background-color: #00a39b;
+}
+
+#posmenu li:hover a{
+    color: #ffffff;
+}
+
+.txt1, .txt2, .txt3 {
+    display: none;
+}
+
+.txtBanner {
+    position: relative;
+    width: 673px;
+    text-align: left;
+    color: white;
+    float: right;
+    right: calc(45.3% - 35%);
+    margin-top: -37.8%;
+}
+/*
+
 #logomenu {
     margin-left: -16%;
     position: absolute;
@@ -47,3 +152,4 @@
         margin-top: 7%;
     }
 }
+*/
