--- a/Css/rodape.css
+++ b/Css/rodape.css
@@ -5,8 +5,8 @@
 }
 #rodpe {
     width: 100%;
-    height: 250px;
-    background-color: #FFFFFF;
+    height: 180px;
+    background-color: #f4f4f4;
 }
 
 #menuRodape {
@@ -18,10 +18,6 @@
 .imgrod {
     margin-top: -4.7%;
     margin-right: 2.1%;
-}
-h2, h5.contato{
-    color: #fff;
-    text-align: center;
 }
 
 img#bg-baixo{
