--- a/Css/topo.css
+++ b/Css/topo.css
@@ -110,19 +110,202 @@ div#menu {
     color: #ffffff;
 }
 
-.txt1, .txt2, .txt3 {
-    display: none;
-}
+
+/********** HOME **********/
 
 .txtBanner {
-    position: relative;
-    width: 673px;
-    text-align: left;
-    color: white;
-    float: right;
-    right: calc(45.3% - 35%);
-    margin-top: -37.8%;
+    position: absolute;
+    left: 0;
+    margin-top: 100px;
 }
+
+.margemTop {
+    margin-top:260px;
+    animation-duration: 6s;
+}
+
+#nossoCliente {
+    width: 99vw;
+    background: #f4f4f4;
+    padding: 0px;
+}
+
+.carousel-indicators {
+    left: 50.6%;
+}
+
+.triangle-down {
+    border-left: 25px solid transparent;
+    border-right: 25px solid transparent;
+    border-top: 20px solid #85c6ad;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: 0;
+    right:0;
+    margin: auto;
+    z-index: 9999;
+}
+
+#txtNossoCliente {
+    padding: 50px 0;
+}
+
+h1 {
+    font-size: 60px;
+    color: #00a39b;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 40px;
+    color: #00a39b;
+    font-weight: bold;
+}
+
+p {
+    font-size: 20px;
+    color: #282828;
+    text-align: justify;
+    padding: 20px 0 0 0;
+}
+
+
+#planosHome {
+    display: block;
+    position: relative;
+    width: 99vw;
+    /*height: auto;*/
+    height: 75vh;
+    padding: 0px;
+    text-align: center
+}
+
+#txtPlanosHome{
+    text-align: center;
+}
+
+#txtPlanosHome p{
+    text-align: center;
+}
+
+#planosDestaque {
+    margin-top: 30px;
+}
+
+.verde {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    height: 10vh;
+    width: 20vw;
+    background-color: #2fac69;
+    color: #fff;
+    padding: 0;
+    text-align: center;
+}
+
+.verde h2 {
+    color: #fff;
+    padding-top: 10px;
+}
+
+.verde p {
+    color: #fff;
+    padding-top: 0px;
+    text-align: center;
+}
+
+.txtPreco {
+    width: 18vw;
+    margin: auto;
+}
+
+.txtPreco  h3 {
+    font-size: 30px;
+}
+
+hr {
+    border: 2px solid #cdcdcd;
+}
+
+#btnPlanoHome {
+    width: 300px;
+    height: 80px;
+    margin-top: 30px;
+    background-color: #18a394;
+    border: none;
+    font-size: 30px;
+    color: #fff;
+}
+
+/********** RODAPÉ **********/
+
+#menuRodape{
+    vertical-align: middle;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+#menuRodape ul {
+    padding-top:30px;
+    margin:0;
+    list-style:none;
+}
+
+#menuRodape ul li { display: inline; }
+
+#menuRodape ul li a {
+    padding: 2px 20px;
+    display: inline-block;
+
+    /* visual do link */
+    color: #333;
+    text-decoration: none;
+    border-left:3px solid #2daa6a;
+}
+
+#menuRodape img{
+    float: left;
+    display: inline-block;
+    padding: 10px;
+}
+
+#direitos{
+    clear: left;
+    background-color: #00285c;
+    padding: 10px;
+    color: white;
+}
+
+#direitos div{
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+#btn_areaCliente{
+    cursor:pointer;
+}
+
+#btninfor1{
+    cursor:pointer;
+    margin-top: 60px;
+}
+
+#btninfor2{
+    cursor:pointer;
+    margin-top: 59px;
+}
+
+#btninfor3{
+    cursor:pointer;
+    margin-top: 1px;
+}
+
+#btninfor4{
+    cursor:pointer;
+    margin-top: 27px;
+}
+
 /*
 
 #logomenu {
