--- a/Css/topo.css
+++ b/Css/topo.css
@@ -140,7 +140,15 @@ div#menu {
 #planosCorporativo {
     display: block;
     position: relative;
-    width: 50vw;
+    width: 55vw;
+    height: auto;
+    margin: auto;
+}
+
+#planosResidenciais {
+    display: block;
+    position: relative;
+    width: 55vw;
     height: auto;
     margin: auto;
 }
