--- a/bloqueio/bloqueio.css
+++ b/bloqueio/bloqueio.css
@@ -20,3 +20,28 @@
     left: 0;
     margin: auto;
 }
+
+#linkBtn {
+    cursor: hand;
+}
+
+#btn {
+    display: block;
+    position: absolute;
+    background-color: #13484a;
+    border: 3px solid #13484a;
+    border-radius: 10px;
+    padding: 12px;
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+    margin-left: 509px;
+    margin-top: 555px;
+    z-index: 9999;
+    cursor: hand;
+}
+
+#btn:hover {
+    background-color: #0a292a;
+    border: 3px solid #0a292a;
+}
