--- a/Css/topo.css
+++ b/Css/topo.css
@@ -30,8 +30,9 @@ div#logoMenu {
     position: relative;
     margin: auto;
     height: 11vh;
-    width: 55vw;
-
+    /*width: 55vw;*/
+    width: 1056px;
+    min-height: 73px;
 }
 
 div#logoMenu img {
@@ -54,7 +55,6 @@ div#logoMenu #areaCliente button {
     margin-top: 3.37vh;
    /* width: 9.9vw;*/
     width: 190px;
-
     border: 1px solid #00a39b;
     color: #00a39b;
 }
@@ -78,16 +78,21 @@ div#logoMenu #areaCliente button i:hover {
 div#menu {
     display: block;
     position: relative;
-    margin: auto;
     padding: 0;
-    width: 55vw;
     font-size: 18px;
     color: #737373;
 }
 
+.navbar-nav {
+    display: inline-block;
+    float: none !important;
+}
+
+.navbar-collapse {
+    text-align: center;
+}
+
 #bs-example-navbar-collapse-1 {
-    position: relative;
-    margin: auto;
     padding: 0px;
 }
 
@@ -255,3 +260,33 @@ div#menu {
     }
 }
 */
+
+/********** @MEDIAS **********/
+@media all and (max-width: 1061px) {
+    div#logoMenu {
+        width: 95vw;
+    }
+}
+
+@media all and (max-width: 1061px) {
+    #posmenu li {
+        padding-right: 12px;
+        padding-left: 12px;
+    }
+    div#menu {
+        font-size: 16px;
+    }
+}
+
+@media all and (max-width: 917px) {
+    #posmenu li {
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+    div#menu {
+        font-size: 14px;
+    }
+    .nav>li>a {
+        padding: 10px 12px;
+    }
+}
