--- a/Css/home.css
+++ b/Css/home.css
@@ -10,8 +10,6 @@
     margin-top: 18%;
 }
 
-
-
 #nossoCliente {
     width: 99vw;
     background: #fbfbfb;
@@ -31,9 +29,9 @@
     height: 20px;
     position: absolute;
     left: 0;
-    right:0;
+    right: 0;
     margin: auto;
-    z-index: 9999;
+    z-index: 9998;
 }
 
 #txtNossoCliente {
@@ -60,23 +58,23 @@
 #planosHome {
     display: block;
     position: relative;
-    width: 99vw;
-    /*height: auto;*/
-    height: 75vh;
+    width: 97vw;
+    height: auto;
     padding: 0px;
     text-align: center
 }
 
 #txtPlanosHome{
     text-align: center;
-}
-
-#txtPlanosHome p{
-    text-align: center;
+    margin: auto;
 }
 
 #planosDestaque {
-    margin-top: 30px;
+    display: block;
+    position: relative;
+    /*margin-top: 30px;*/
+    width: 1300px;
+    margin: auto;
 }
 
 /* Texto do Banner */
@@ -109,6 +107,11 @@
 
 
 /********** @MEDIAS **********/
+@media all and (max-width: 1400px) {
+    #planosDestaque {
+        width: 97vw;
+    }
+}
 
 @media all and (max-width: 1300px) {
     #txtNossoCliente {
@@ -122,12 +125,46 @@
     #imgNossoCliente {
         width: 49%;
     }
+
+
+
+    .quadroG {
+        width: 340px;
+    }
+
+
+}
+
+@media all and (max-width: 1200px) {
+    .quadroG {
+        width: 330px;
+    }
+}
+
+@media all and (max-width: 1100px) {
+    .quadroG {
+        width: 300px;
+    }
 }
 
 @media all and (max-width: 1000px) {
     #txtNossoCliente h1 {
         width: 220%;
         font-size: 45px;
+    }
+
+    #planosDestaque {
+        width: 950px;
+    }
+}
+
+@media all and (max-width: 991px) {
+    .quadroG {
+        width: 403px;
+    }
+
+    #planosDestaque {
+        width: 97vw;
     }
 }
 
@@ -138,13 +175,19 @@
     }
 
     #txtNossoCliente h1 {
-        width: 225%;
+        width: 90vw;
         font-size: 40px;
     }
 
     #txtNossoCliente p {
         padding: 10px 0 0 0;
         text-align: left;
+    }
+}
+
+@media all and (max-width: 750px) {
+    #nossoCliente {
+        width: 97vw;
     }
 }
 
@@ -199,6 +242,34 @@
     #txtNossoCliente h1 {
         font-size: 35px;
     }
+
+    .quadroG {
+        width: 303px;
+    }
+
+    .quadroPlano h3 {
+        font-size: 25px;
+    }
+
+    h2 {
+        font-size:  35px;
+    }
+
+    /*#planosDestaque {
+        width: 350px;
+    }*/
+
+    hr {
+        margin-top: 18px;
+        margin-bottom: 18px;
+    }
+
+    .btnPlanos {
+        margin-top: 20px;
+        font-size: 25px;
+        width: 70%;
+        height: 70px;
+    }
 }
 
 @media all and (max-width: 450px) {
@@ -211,13 +282,35 @@
     }
 }
 
+@media all and (max-width: 400px) {
+    .quadroG {
+        width: 280px;
+    }
+
+    #planosDestaque {
+        /*width: 300px;*/
+    }
+
+    #planosDestaque .col-lg-4 {
+        padding: 0px;
+    }
+}
+
 @media all and (max-width: 350px) {
     .carousel-inner #banner1 {
         height: 220px;
     }
 
-    #txtNossoCliente p {
+    p {
           font-size: 18px;
+    }
+
+    .quadroG {
+        width: 250px;
+    }
+
+    #planosDestaque {
+       /* width: 270px;*/
     }
 }
 
@@ -232,6 +325,14 @@
 
     #txtNossoCliente {
         font-size: 16px;
+    }
+
+    .quadroG {
+        width: 230px;
+    }
+
+    #planosDestaque {
+        /*width: 250px;*/
     }
 
 }
