--- a/Css/cobertura.css
+++ b/Css/cobertura.css
@@ -1,3 +1,8 @@
+h4 {
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+
 #cobertura {
     display: block;
     position: relative;
@@ -6,7 +11,7 @@
     padding: 0px;
 }
 
-.left {
+.leftCobertura {
     position: relative;
     display: block;
     float: left;
@@ -14,7 +19,7 @@
     background-color: #00a39b;
 }
 
-.right {
+.rightCobertura {
     position: relative;
     display: block;
     height: 480px;
@@ -22,21 +27,19 @@
     background-color: #352c59;
 }
 
-.left iframe, .right iframe {
+.leftCobertura iframe, .rightCobertura iframe {
     width: 100%;
     padding: 0;
     border: none;
 }
 
-.col-lg-6 {
+#cobertura .col-lg-6 {
     padding: 0px;
 }
 
 .bairro {
     color: #fff;
     height: 480px;
-    /*height: auto;
-    background: red;*/
 }
 
 .bairro h3 {
@@ -45,7 +48,7 @@
     margin-bottom: 0px;
 }
 
-.bairro h4 {
+.bairro .texto h4 {
     padding-bottom: 10px;
     text-align: left;
 }
@@ -54,11 +57,11 @@
     margin: 10px 0px;
 }
 
+
 .bairro .texto {
     display: block;
     position: relative;
     margin: auto;
-    width: 83%;
 }
 
 #cobertura hr {
@@ -69,4 +72,74 @@
 
 .scrolloff {
     pointer-events: none;
+}
+
+#maracanau  {
+    width: 80%;
+    column-count: 3;
+    -moz-column-count:3;
+    -webkit-column-count:3;
+    -o-column-count:3;
+}
+
+#maranguape {
+    width: 200px;
+}
+
+#pacatuba {
+    width: 207px;
+}
+
+#fortaleza {
+    width: 210px;
+}
+
+.setaVerde {
+    border-top-color: #00a39b;
+}
+
+.setaRoxo {
+    border-top-color: #352c59;
+}
+
+.setaVerde, .setaRoxo {
+    display: none;
+}
+
+@media all and (max-width: 991px) {
+    #cobertura .bairro, #cobertura .mapa {
+        margin: 0px;
+    }
+
+    #cobertura .mapa {
+        margin-bottom: 20px;
+    }
+
+    .setaVerde, .setaRoxo {
+        display: block;
+    }
+
+    .bairro {
+        height: auto;
+    }
+}
+
+@media all and (max-width: 700px) {
+    #maracanau {
+        width: 60%;
+        column-count: 2;
+        -moz-column-count:2;
+        -webkit-column-count:2;
+        -o-column-count:2;
+    }
+}
+
+@media all and (max-width: 410px) {
+    #maracanau {
+        column-count: 1;
+        -moz-column-count: 1;
+        -webkit-column-count: 1;
+        -o-column-count: 1;
+        height: auto;
+    }
 }
