--- a/Css/empresa.css
+++ b/Css/empresa.css
@@ -3,6 +3,7 @@
     position: relative;
     background-color: #fbfbfb;
     background-image: url(../Images/bgIcon.png);
+    z-index: 9998;
 }
 
 #empresa h2 {
