--- a/Css/contatos.css
+++ b/Css/contatos.css
@@ -153,6 +153,7 @@
 @media all and (max-width: 800px) {
     #containerContato {
         width: 100%;
+        padding-bottom: 30px;
     }
 
     #txtContato {
