--- a/Css/planos.css
+++ b/Css/planos.css
@@ -61,7 +61,7 @@ hr {
     margin: auto;
     margin-top: 40px;
     margin-bottom: 40px;
-    border-radius: 5%;
+    /*border-radius: 5%;*/
 }
 
 .quadroPlano  h3 {
@@ -87,7 +87,7 @@ hr {
 
 .quadroG{
     width: 403px;
-    background-color: #f8f8f8;
+    /*background-color: #f8f8f8;*/
 }
 
 
@@ -116,13 +116,6 @@ hr {
     }
     #planosCorporativos {
         width: 80%;
-    }
-}
-
-@media all and (max-width: 990px){
-    .quadroPlano {
-        margin-top: 40px;
-        margin-bottom: 40px;
     }
 }
 
@@ -165,12 +158,12 @@ hr {
 
 @media all and (max-width: 400px) {
     .row .col4, .row .col6 {
-        width: 315px;
+        width: 230px;
         margin: 0px;
     }
 
     .quadroP, .quadroG {
-        width: 275px;
+        width: 230px;
     }
 
     .verde h2 {
@@ -182,6 +175,11 @@ hr {
         height: 60px;
         margin-top: 20px;
         font-size: 25px;
+    }
+
+    .quadroPlano {
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     .quadroPlano  h3 {
